GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/X374_Improvement_Plan__c.object-meta.xml
<CustomObject>
    <label>Improvement Plan</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Database reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Improvement Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>