GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/A2V_number_stock_code__c.field-meta.xml
<CustomField>
    <fullName>A2V_number_stock_code__c</fullName>
    <inlineHelpText>Insert the Equinox part reference if applicable</inlineHelpText>
    <label>Part number (Equinox)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>