GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Actions_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Actions_and_Comments__c</fullName>
    <label>Actions and Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>