GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Closed_by_EIL_Manager__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_EIL_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed by (EIL) Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Improvement_Plans_MGR</relationshipName>
    <type>Lookup</type>
</CustomField>