GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Document_Drawing_reference__c.field-meta.xml
<CustomField>
    <fullName>Document_Drawing_reference__c</fullName>
    <label>Document / Drawing reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>