GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Next_action__c.field-meta.xml
<CustomField>
    <fullName>Next_action__c</fullName>
    <inlineHelpText>Select the most appropriate next action owner</inlineHelpText>
    <label>Next action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EIL</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>