GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Overall_risk_rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_risk_rating__c</fullName>
    <description>Autopopulated product of likelihood and severity</description>
    <formula>VALUE(LEFT(TEXT(Risk_rating_severity__c),1)) *  VALUE(LEFT(TEXT(Risk_rating_likelihood__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rick rating- severity * Risk rating- likelihood</inlineHelpText>
    <label>Overall risk rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>