GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DIP</fullName>
            </value>
            <value>
                <fullName>MIP</fullName>
            </value>
            <value>
                <fullName>OIP</fullName>
            </value>
            <value>
                <fullName>RIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>