GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Risk_rating_likelihood__c.field-meta.xml
<CustomField>
    <fullName>Risk_rating_likelihood__c</fullName>
    <description>Select the most appropriate risk rating (likelihood)</description>
    <inlineHelpText>Select the most appropriate risk rating (likelihood)</inlineHelpText>
    <label>Risk rating- likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- highly unlikely / remote (5 yearly / once in life)</fullName>
            </value>
            <value>
                <fullName>2- unlikely / possible (yearly / 5-yearly)</fullName>
            </value>
            <value>
                <fullName>3- occasional (bi-monthly / yearly)</fullName>
            </value>
            <value>
                <fullName>4- regular (weekly / monthly)</fullName>
            </value>
            <value>
                <fullName>5- common (daily / weekly)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>