GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Risk_rating_severity__c.field-meta.xml
<CustomField>
    <fullName>Risk_rating_severity__c</fullName>
    <description>Select the most appropriate risk rating (severity)</description>
    <inlineHelpText>Select the most appropriate risk rating (severity)</inlineHelpText>
    <label>Risk rating- severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 – insignificant – trivial or no effect on service, rolling stock or infrastructure.</fullName>
            </value>
            <value>
                <fullName>2 – Staff / Passenger minor injury requiring 1st aid, Service Delay of 5 mins or Rolling stock / infrastructure damage up to £1000</fullName>
            </value>
            <value>
                <fullName>3 – Major injury requiring hospitalisation / RIDDOR, Service cancellation, Damage up to £10k</fullName>
            </value>
            <value>
                <fullName>4 – Serious injury – loss of eye/ limb. Multiple service cancellations. Damage up to  £100k</fullName>
            </value>
            <value>
                <fullName>5 – Fatality. Long term disruption to service / Fleet out of service. Catastrophic damage in excess of £100k.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>