GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Serial_number__c</fullName>
    <label>Serial number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>