GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_closed_by_EIL__c.field-meta.xml
<CustomField>
    <fullName>X374_closed_by_EIL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically populated based on the Eurostar user who proposed closure</inlineHelpText>
    <label>Closed by (EIL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X374_Closed_by_EIL</relationshipName>
    <type>Lookup</type>
</CustomField>