GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_Development_sign_off_date_planned__c.field-meta.xml
<CustomField>
    <fullName>X374_Development_sign_off_date_planned__c</fullName>
    <label>Development sign-off date - planned</label>
    <type>Date</type>
</CustomField>