GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_Implementation_comments__c.field-meta.xml
<CustomField>
    <fullName>X374_Implementation_comments__c</fullName>
    <label>Implementation comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>