GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_Implementation_completion_date__c.field-meta.xml
<CustomField>
    <fullName>X374_Implementation_completion_date__c</fullName>
    <label>Implementation completion date</label>
    <type>Date</type>
</CustomField>