GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_Reliability_incident__c.field-meta.xml
<CustomField>
    <fullName>X374_Reliability_incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to any related reliability incident in the performance portal</inlineHelpText>
    <label>Reliability Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipName>X374_RI</relationshipName>
    <type>Lookup</type>
</CustomField>