GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_SAN_EIL__c.field-meta.xml
<CustomField>
    <fullName>X374_SAN_EIL__c</fullName>
    <inlineHelpText>Insert the SAN reference if applicable</inlineHelpText>
    <label>SAN / PAN (EIL)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>