GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374_TMI_production_reference__c.field-meta.xml
<CustomField>
    <fullName>X374_TMI_production_reference__c</fullName>
    <inlineHelpText>Insert the EIL (TMI) campaign reference if applicable</inlineHelpText>
    <label>TMI Campaign</label>
    <type>TextArea</type>
</CustomField>