GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Actual_benefits__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Actual_benefits__c</fullName>
    <label>Actual benefits</label>
    <type>TextArea</type>
</CustomField>