GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Benefit_type__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Benefit_type__c</fullName>
    <description>Select the benefit type most appropriate to the improvement</description>
    <inlineHelpText>Select the benefit type most appropriate to the improvement</inlineHelpText>
    <label>Benefit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Safety/Security</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Remedy text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>