GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Champion__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Champion__c</fullName>
    <label>Champion</label>
    <length>200</length>
    <type>Text</type>
</CustomField>