GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_closure_comments__c.field-meta.xml
<CustomField>
    <fullName>X374IP_closure_comments__c</fullName>
    <inlineHelpText>Insert any comments / justification for the closure of the improvement plan record</inlineHelpText>
    <label>Closure comments</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>