GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Comments__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Comments__c</fullName>
    <inlineHelpText>Comments / progress on each agreed actions. To make for easy management precede each entry with the date and your initials.</inlineHelpText>
    <label>Comments</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>