GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Date_created__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Date_created__c</fullName>
    <inlineHelpText>Automatically populated based on the date the record was created</inlineHelpText>
    <label>Date created</label>
    <type>Date</type>
</CustomField>