GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Description__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Description__c</fullName>
    <inlineHelpText>An initial statement about the problem</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>