GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_EIL_Lead__c.field-meta.xml
<CustomField>
    <fullName>X374IP_EIL_Lead__c</fullName>
    <inlineHelpText>Insert the name(s) of the Eurostar lead engineer(s)</inlineHelpText>
    <label>EIL Lead</label>
    <type>TextArea</type>
</CustomField>