GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_EIL_PCF_reference__c.field-meta.xml
<CustomField>
    <fullName>X374IP_EIL_PCF_reference__c</fullName>
    <inlineHelpText>Insert the EIL PCF reference if applicable</inlineHelpText>
    <label>PCF (EIL)</label>
    <type>TextArea</type>
</CustomField>