GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Forecast_benefit__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Forecast_benefit__c</fullName>
    <label>Forecast benefit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>