GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Implementation_progress_actual__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Implementation_progress_actual__c</fullName>
    <inlineHelpText>percentage complete</inlineHelpText>
    <label>Implementation progress % - actual</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>