GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_KLAF__c.field-meta.xml
<CustomField>
    <fullName>X374IP_KLAF__c</fullName>
    <inlineHelpText>Insert the KLAF reference if applicable</inlineHelpText>
    <label>KLAF (SAG)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>