GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Next_action__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Next_action__c</fullName>
    <inlineHelpText>List of agreed actions to be taken</inlineHelpText>
    <label>Agreed action</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>