GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_origin__c.field-meta.xml
<CustomField>
    <fullName>X374IP_origin__c</fullName>
    <inlineHelpText>Where the problem originated from, this could be a specific defect (work report, train fault, reliability incident), individual, report (SAN, Hazard, SRD) etc.</inlineHelpText>
    <label>Origin of problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>