GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Planned_finish__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Planned_finish__c</fullName>
    <label>Planned implementation finish</label>
    <type>Date</type>
</CustomField>