GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Planned_start__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Planned_start__c</fullName>
    <label>Planned implementation start</label>
    <type>Date</type>
</CustomField>