GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Prioirity__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Prioirity__c</fullName>
    <inlineHelpText>Select the priority for the improvement based on the overall risk rating (High 10-25, Medium 5-9, Low 1-4)</inlineHelpText>
    <label>Prioirity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>