GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Progress_v_planned__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Progress_v_planned__c</fullName>
    <label>Progress v planned</label>
    <type>TextArea</type>
</CustomField>