GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Reference_number__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Reference_number__c</fullName>
    <description>Generated reference number {Record type}-374/{Primary code}/{Sequence}
eg RIP-374/B/12</description>
    <inlineHelpText>Based upon the record type and primary code</inlineHelpText>
    <label>Reference number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>