GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_related_plan__c.field-meta.xml
<CustomField>
    <fullName>X374IP_related_plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>link to a related improvement plan</description>
    <label>Related IP</label>
    <referenceTo>X374_Improvement_Plan__c</referenceTo>
    <relationshipName>X374_Improvement_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>