GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_SIE_Lead__c.field-meta.xml
<CustomField>
    <fullName>X374IP_SIE_Lead__c</fullName>
    <inlineHelpText>Insert the name(s) of the Siemens lead engineer(s)</inlineHelpText>
    <label>SIE Lead</label>
    <type>TextArea</type>
</CustomField>