GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_SRD__c.field-meta.xml
<CustomField>
    <fullName>X374IP_SRD__c</fullName>
    <inlineHelpText>Insert the SRD reference if applicable</inlineHelpText>
    <label>SRD (SIE)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>