GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Status__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Status__c</fullName>
    <inlineHelpText>Select the status of the record based upon its stage in the process</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Solution identified</fullName>
            </value>
            <value>
                <fullName>Solution agreed</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>On hold- future development</fullName>
            </value>
            <value>
                <fullName>Future wishlist</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closure proposed</fullName>
            </value>
            <value>
                <fullName>Awaiting software update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>