GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_TI_Reference__c.field-meta.xml
<CustomField>
    <fullName>X374IP_TI_Reference__c</fullName>
    <label>TI Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>