GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Title__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Title__c</fullName>
    <inlineHelpText>Keep the title short and specific to the improvement. Avoid a generic short system title that doesn’t identify the problem</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>