GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/fields/X374IP_Who__c.field-meta.xml
<CustomField>
    <fullName>X374IP_Who__c</fullName>
    <label>Responsible</label>
    <type>TextArea</type>
</CustomField>