GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X373_Improvement_Plan.recordType-meta.xml
<RecordType>
    <fullName>X373_Improvement_Plan</fullName>
    <active>true</active>
    <label>373 Improvement Plan</label>
</RecordType>