GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X374_Improvement_Plan.recordType-meta.xml
<RecordType>
    <fullName>X374_Improvement_Plan</fullName>
    <active>false</active>
    <label>374 Improvement Plan</label>
</RecordType>