GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X374IP_DIP.recordType-meta.xml
<RecordType>
    <fullName>X374IP_DIP</fullName>
    <active>true</active>
    <description>Defect Prevention Plan</description>
    <label>DIP</label>
</RecordType>