GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X374IP_MIP.recordType-meta.xml
<RecordType>
    <fullName>X374IP_MIP</fullName>
    <active>true</active>
    <description>Maintenance Improvement Plan</description>
    <label>MIP</label>
</RecordType>