GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X374IP_OIP.recordType-meta.xml
<RecordType>
    <fullName>X374IP_OIP</fullName>
    <active>true</active>
    <description>Operations Improvement Plan</description>
    <label>OIP</label>
</RecordType>