GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/recordTypes/X374IP_RIP.recordType-meta.xml
<RecordType>
    <fullName>X374IP_RIP</fullName>
    <active>true</active>
    <description>Reliability Improvement Plan</description>
    <label>RIP</label>
</RecordType>