GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/validationRules/X373_Closure_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>X373_Closure_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;X373_Improvement_Plan&#39;,
ISCHANGED( X374IP_Status__c ) ,
ISPICKVAL(X374IP_Status__c, &quot;Closed&quot;),
OR(
AND(
ISBLANK( Closed_by_EIL_Manager__c ),
$User.Division != &#39;Manager&#39;,
NOT(ISBLANK( Closed_by_EIL_Engineer__c ))),
AND(
NOT(ISBLANK( Closed_by_EIL_Manager__c )),
$User.Division = &#39;Manager&#39;,
ISBLANK( Closed_by_EIL_Engineer__c )
)
)
)</errorConditionFormula>
    <errorMessage>Cannot close record without second authorisation</errorMessage>
</ValidationRule>