GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/listViews/All_374ImprovementPlan.listView-meta.xml
<ListView>
    <fullName>All_374ImprovementPlan</fullName>
    <columns>NAME</columns>
    <columns>X374IP_Title__c</columns>
    <columns>X374IP_Date_created__c</columns>
    <columns>X374IP_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>X374IP_Primary_code__c</columns>
    <columns>X374IP_Reference_number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>