GearsetPOC/force-app/main/default/objects/X374_Improvement_Plan__c/listViews/All_IPs_Open.listView-meta.xml
<ListView>
    <fullName>All_IPs_Open</fullName>
    <columns>NAME</columns>
    <columns>X374IP_Reference_number__c</columns>
    <columns>X374IP_Title__c</columns>
    <columns>X374IP_EIL_Lead__c</columns>
    <columns>Next_action__c</columns>
    <columns>X374IP_Status__c</columns>
    <columns>X374IP_Prioirity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>X374IP_UK_engineering_change__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>X374IP_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All IPs Open</label>
</ListView>